corpus/comments.txt
============================================
Line comments
============================================

function Run() {
  a = 123 // foo;
    ;
  b
    //.foo()
    .bar()
  ;

  b /*.foo()*/ .bar();
  b. /*.foo()*/ bar();

  c = '//Test';
}

---

(program
  (mss_function (identifier) (parameter_list)
    (statement_block
       (assignment_statement (identifier) (number_literal) (comment))
       (call_statement (call_expression (field_expression (identifier) (comment) (identifier)) (argument_list)))
       (call_statement (call_expression (field_expression (identifier) (comment) (identifier)) (argument_list)))
       (call_statement (call_expression (field_expression (identifier) (comment) (identifier)) (argument_list)))
       (assignment_statement (identifier) (string_literal)))))
